[gd_scene load_steps=4 format=3 uid="uid://cvlfmiqtgmtuo"]

[ext_resource type="Script" path="res://Scripts/UI.gd" id="1_e5lg7"]
[ext_resource type="Script" path="res://Scripts/HBContainer.gd" id="2_4gfba"]
[ext_resource type="Script" path="res://Scripts/TopPanel.gd" id="3_ble76"]

[node name="UserInterface" type="Control"]
layout_mode = 3
anchors_preset = 0
offset_right = 750.0
offset_bottom = 750.0
script = ExtResource("1_e5lg7")
metadata/_edit_lock_ = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 12
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
offset_top = -31.0
grow_horizontal = 2
grow_vertical = 0
script = ExtResource("2_4gfba")

[node name="Button1" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Shop" type="Label" parent="HBoxContainer/Button1"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -11.5
offset_right = 20.0
offset_bottom = 11.5
grow_horizontal = 2
grow_vertical = 2
text = "Shop"

[node name="Button2" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Campaign" type="Label" parent="HBoxContainer/Button2"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -42.0
offset_top = -13.0
offset_right = 42.0
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Campaign"

[node name="Button3" type="Button" parent="HBoxContainer"]
custom_minimum_size = Vector2(0, 30)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 8

[node name="Heroes" type="Label" parent="HBoxContainer/Button3"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -28.5
offset_top = -13.0
offset_right = 28.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "Heroes"

[node name="Panel" type="Panel" parent="."]
layout_mode = 1
anchors_preset = 10
anchor_right = 1.0
offset_bottom = 50.0
grow_horizontal = 2
script = ExtResource("3_ble76")

[node name="GoldLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -13.0
offset_right = 34.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "G 1000K"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="BlueLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.65
anchor_top = 0.5
anchor_right = 0.65
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -12.0
offset_right = 34.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "B 1000K"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[node name="DiamondLabel" type="Label" parent="Panel"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.8
anchor_top = 0.5
anchor_right = 0.8
anchor_bottom = 0.5
offset_left = -34.5
offset_top = -13.0
offset_right = 34.5
offset_bottom = 13.0
grow_horizontal = 2
grow_vertical = 2
text = "D 1000K"
horizontal_alignment = 1
vertical_alignment = 1
autowrap_mode = 3

[connection signal="focus_entered" from="HBoxContainer/Button1" to="." method="_on_button_1_focus_entered"]
[connection signal="focus_exited" from="HBoxContainer/Button1" to="." method="_on_button_1_focus_exited"]
